# chainbuild

./: .gitignore  crossexam.py  readme.md  ubuntu-armhf.txt
cc/: cc.c  meson.build  meson_options.txt
fauxdroid/: faux.c  meson.build  meson_options.txt
fauxdroid/com/mesonbuild/: Faux.java
